...
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <CheckBox
        android:id="@+id/recreation_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textView23" />

    <CheckBox
        android:id="@+id/pool_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView24"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textView24" />

    <CheckBox
        android:id="@+id/outdoor_space_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textView25" />

    <CheckBox
        android:id="@+id/garage_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView26"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textView26" />

    <CheckBox
        android:id="@+id/central_air_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView27"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textView27" />

    <CheckBox
        android:id="@+id/fireplace_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/textView28" />
...
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />


    <CheckBox
        android:id="@+id/spa_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/textView29" />


    <CheckBox
        android:id="@+id/dishwasher_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView30"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/textView30" />

    <CheckBox
        android:id="@+id/doorman_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView31"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/textView31" />

    <CheckBox
        android:id="@+id/elevator_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView32"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/textView32" />

    <CheckBox
        android:id="@+id/laundry_room_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView33"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/textView33" />

    <CheckBox
        android:id="@+id/no_fee_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView34"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/textView34" />
...
