...
            android:columnCount="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_edit_post_text">

            <androidx.cardview.widget.CardView
                android:id="@+id/any_card_view"
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="15dp"
                app:cardElevation="@{anyClicked ? 0 : 10, default= `0dp`}">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/any_image_view"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@{anyClicked ? @drawable/any_selected : @drawable/any, default= @drawable/any_selected}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...
                        app:layout_constraintTop_toBottomOf="@+id/any_image_view" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/apartment_card_view"
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:cardCornerRadius="15dp"
                android:layout_margin="15dp"
                app:cardElevation="@{apartmentClicked ? 0 : 10, default= `0dp`}">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/apartment_image_view"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@{apartmentClicked ? @drawable/apartment_selected : @drawable/apartment, default= @drawable/apartment}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/single_image_view"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@{singleClicked ? @drawable/single_family_selected : @drawable/single_family, default= @drawable/single_family}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/multi_image_view"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@{multiClicked ? @drawable/multi_family_selected : @drawable/multi_family, default= @drawable/multi_family}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/condo_image_view"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@{condoClicked ? @drawable/condo_selected : @drawable/condo, default= @drawable/condo}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/mobile_image_view"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@{mobileClicked ? @drawable/mobile_selected : @drawable/mobile, default= @drawable/mobile}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/farm_image_view"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@{farmClicked ? @drawable/farm_selected : @drawable/farm, default= @drawable/farm}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/land_image_view"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:src="@{landClicked ? @drawable/land_selected : @drawable/land, default= @drawable/land}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...
