...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/price_min"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@{sortOption == `price_low` ? @drawable/price_min_selected : @drawable/price_min, default= @drawable/price_min}" />

                <TextView
                    android:layout_width="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/price_max"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@{sortOption == `price_high` ? @drawable/price_max_selected : @drawable/price_max, default= @drawable/price_max}" />

                <TextView
                    android:layout_width="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/relevance"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@{sortOption == `relevance` ? @drawable/relevance_selected : @drawable/relevance, default= @drawable/relevance_selected}" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/date"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@{sortOption == `newest` ? @drawable/calendar_selected : @drawable/calendar, default= @drawable/calendar}"/>

                <TextView
                    android:layout_width="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sqft"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@{sortOption == `sqft_high` ? @drawable/ruler_selected : @drawable/ruler, default= @drawable/ruler}" />

                <TextView
                    android:layout_width="wrap_content"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/photos"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:src="@{sortOption == `photos` ? @drawable/photo_selected : @drawable/photo, default= @drawable/photo}" />

                <TextView
                    android:layout_width="wrap_content"
...
